Changes in homepage

--- a/dados/config.json
+++ b/dados/config.json
@@ -151,5 +151,5 @@
     "Reconsideração: indeferimento e redução do valor da 1ª instância",
     "Indeferimento e redução do valor"
   ],
-  "usuario": ""
+  "usuario": "Sidnei"
 }
