new flet version config

--- a/dados/config.json
+++ b/dados/config.json
@@ -138,7 +138,8 @@
     "ALEGAÇÃO: PÓS-PAGAMENTO",
     "ALEGAÇÃO: ABRANGÊNCIA GEOGRÁFICA",
     "ALEGAÇÃO: QUANTIDADE DO PROCEDIMENTO NÃO COBERTA PELO CONTRATO",
-    "ALEGAÇÃO DE NATUREZA TÉCNICA"
+    "ALEGAÇÃO DE NATUREZA TÉCNICA",
+    "ALEGAÇÃO: EXCLUSÃO DO BENEFICIÁRIO POR RESCISÃO DO CONTRATO DE TRABALHO"
   ],
   "lista_opiniao_decisao": [
     "INDEFERIMENTO",
