Atualiza o arquivo .gitignore para incluir novas regras de ignorância, remove arquivos de configuração do IDE e limpa arquivos binários do __pycache__. Refatora o main.py para ajustar a configuração do tema e remove importações não utilizadas em main_page.py.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
 # Ignora a pasta venv
 /venv/
-/*_pycache_/
-/.mypy_cache/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.pytest_cache/
+.mypy_cache/
+
+# Ambiente virtual
+.env
+.venv
+env/
+venv/
+ENV/
+
+# IDEs
+.idea/
+.vscode/
+*.swp
+*.swo
