--- a/dados/config.json
+++ b/dados/config.json
@@ -139,7 +139,8 @@
     "ALEGAÇÃO: ABRANGÊNCIA GEOGRÁFICA",
     "ALEGAÇÃO: QUANTIDADE DO PROCEDIMENTO NÃO COBERTA PELO CONTRATO",
     "ALEGAÇÃO DE NATUREZA TÉCNICA",
-    "ALEGAÇÃO: EXCLUSÃO DO BENEFICIÁRIO POR RESCISÃO DO CONTRATO DE TRABALHO"
+    "ALEGAÇÃO: EXCLUSÃO DO BENEFICIÁRIO POR RESCISÃO DO CONTRATO DE TRABALHO",
+    "ALEGAÇÃO: COBERTURA PARCIAL TEMPORÁRIA DE DOENÇA OU LESÃO PREEXISTENTE"
   ],
   "lista_opiniao_decisao": [
     "INDEFERIMENTO",
